# larpandora

./: CMakeLists.txt  altCMakeLists.cmake
LArPandoraAlgorithms/: CMakeLists.txt  altCMakeLists.cmake
LArPandoraInterface/: CMakeLists.txt  LArPandoraCollector.cxx  LArPandoraCollector.h  LArPandoraHelper.h  LArPandoraParticleCreator.cxx  LArPandoraParticleCreator.h  altCMakeLists.cmake
LArPandoraInterface/scripts/: CMakeLists.txt  altCMakeLists.cmake
LArPandoraPCA/: CMakeLists.txt  LArLPCHelper.cc  LArLPCHelper.h  LArPCAHelper.cc  LArPCAHelper.h
LArPandoraPCA/LACE/src/: CMakeLists.txt  CMakeLists.txt~  LpcProcess.cc
Modules/: larpandoraConfig.cmake.in
cmakeConfig/: CMakeLists.txt  larpandora-fragment.cmake.in
larpandora/LArPandoraAnalysis/: CMakeLists.txt  ConsolidatedPFParticleAnalysisTemplate_module.cc  WorkshopAnalyzerComplete_module.cc  WorkshopAnalyzer_module.cc  run_PandoraEventDump.fcl  run_WorkshopAnalyzer.fcl  run_WorkshopAnalyzerComplete.fcl
larpandora/LArPandoraEventBuilding/: CMakeLists.txt  CollectionSplitting_module.cc  LArPandoraEvent.cxx  LArPandoraEventDump_module.cc  LArPandoraExternalEventBuilding_module.cc  LArPandoraShowerCreationSBND_module.cc  LArPandoraShowerCreation_module.cc  LArPandoraTrackCreation_module.cc  NeutrinoIdBaseTool.cxx  NeutrinoIdBaseTool.h  SimpleNeutrinoId_tool.cc  WorkshopTrackShowerHelper.cxx  WorkshopTrackShowerHelper.h  WorkshopTrackShowerHelperComplete.cxx  WorkshopTrackShowerHelperComplete.h  run_WorkshopTrackShower.fcl
larpandora/LArPandoraEventBuilding/fcl/: external_event_building.fcl
larpandora/LArPandoraInterface/: #LArPandoraInput.cxx#  CMakeLists.txt  LArPandora.cxx  LArPandora.h  LArPandoraGeometry.cxx  LArPandoraHelper.cxx  LArPandoraHelper.h  LArPandoraInput.cxx  LArPandoraOutput.cxx  LArPandoraOutput.h  PFParticleStitcher.h
larpandora/LArPandoraInterface/scripts/: PandoraSettings_Master_SBND.xml  PandoraSettings_Master_SBND_Monitor.xml  PandoraSettings_Master_Standard_Tune.xml  PandoraSettings_Neutrino_Standard.xml  PandoraSettings_Neutrino_Standard_Prod.xml  PandoraSettings_Neutrino_Standard_Tune.xml  PandoraSettings_Neutrino_Vertex_Train.xml
larpandora/RootGraphics/: CMakeLists.txt
ups/: product_deps
